--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,7 @@
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background-image: radial-gradient(ellipse 80% 80% at 50% -20%,#7877c64d,#fff0);
+  background-image: radial-gradient(ellipse 80% 80% at 50% -20%, #7877c64d, #fff0);
   background-color: rgb(3, 7, 18);
 
   font-synthesis: none;
@@ -12,24 +12,31 @@
   -moz-osx-font-smoothing: grayscale;
   background-repeat: no-repeat;
   scroll-behavior: smooth;
+
+  transition: color 0.5s ease-in-out;
+  position: relative;
 }
 
 [data-theme="light"] {
   color: #213547;
-  background-color: #ffffff;
+  background-image: radial-gradient(ellipse 80% 80% at 50% -20%, #979797, #e9e9e9);
   --bg1: rgba(255, 255, 255, 0.3);
-  --bg1-hover: rgba(168, 168, 168, 0.458);
+  --bg1-hover: rgba(75, 75, 75, 0.458);
   --bg1-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
+  --bg1-shadow-hover: 0 0 15px rgba(57,45,255,1),
+    0 0 20px rgba(219,177,246,1);
   --a1: #1f2937e6;
-  --a1-hover: #3f49fe;
+  --a1-hover: #2530f3;
 }
 
 [data-theme="dark"] {
   color: rgba(255, 255, 255, 0.87);
-  background-image: radial-gradient(ellipse 80% 80% at 50% -20%,#7877c64d,#fff0);
+  background-image: radial-gradient(ellipse 80% 80% at 50% -20%, #7877c64d, #fff0);
   --bg1: rgba(31, 41, 55, 0.3);
   --bg1-hover: rgba(67, 67, 67, 0.458);
   --bg1-shadow: 0px 0px 10px rgba(255, 255, 255, 0.2);
+  --bg1-shadow-hover: 0 0 15px rgba(9, 9, 121, 1),
+    0 0 20px rgba(154, 0, 255, 1);
   --a1: #fff;
   --a1-hover: #535bf2;
 }
@@ -40,5 +47,9 @@ body {
 }
 
 section {
-  margin-bottom: 96px;
+  margin-bottom: 200px;
+}
+
+h1 {
+  text-align: center;
 }
