--- a/src/components/abautme.css
+++ b/src/components/abautme.css
@@ -1,6 +1,9 @@
 .abautContainer {
+    padding-top: 9rem;
+    align-content: center;
     max-width: 800px;
-    margin: 2rem auto;
+    margin-left: 15vw;
+    margin-right: 8vh;
     padding: 2rem;
     background-color: var(--bg1);
     border-radius: 10px;
@@ -9,13 +12,13 @@
 }
 
 .abautContainer h1 {
-    font-size: 2.5rem;
+    font-size: clamp(10px, 5vw, 30px);
     margin-bottom: 1.5rem;
     color: var(--a1);
 }
 
 .abautContainer p {
-    font-size: 1.2rem;
+    font-size: clamp(5px, 2.5vw, 15px);
     line-height: 1.8;
     color: var(--a1-hover);
 }
