--- a/src/components/contactme.css
+++ b/src/components/contactme.css
@@ -2,10 +2,9 @@
     padding-top: 9rem;
     align-content: center;
     margin-left: 15vw;
-    margin-right: 15vh;
+    margin-right: 8vh;
 
     max-width: 800px;
-    margin: 2rem auto;
     padding: 2rem;
     background-color: var(--bg1);
     border-radius: 10px;
@@ -18,8 +17,13 @@
 }
 
 .contactTitle h1 {
-    font-size: 2.5rem;
+    font-size: clamp(10px, 5vw, 30px);
     color: var(--a1);
+}
+
+.contactTitle p {
+    font-size: clamp(5px, 2.5vw, 15px);
+    line-height: 1.8;
 }
 
 .contactContainer svg {
