--- a/src/components/experience.css
+++ b/src/components/experience.css
@@ -1,6 +1,6 @@
 .experienceContainer {
     margin-left: 15vw;
-    margin-right: 15vh;
+    margin-right: 15vw;
     user-select: none;
     text-align: center;
     align-content: center;
