--- a/src/components/abautme.css
+++ b/src/components/abautme.css
@@ -3,7 +3,7 @@
     align-content: center;
     max-width: 800px;
     margin-left: 15vw;
-    margin-right: 8vh;
+    margin-right: 15vw;
     padding: 2rem;
     background-color: var(--bg1);
     border-radius: 10px;
@@ -25,6 +25,6 @@
 
 .abautContainer svg {
     margin-right: 0.5rem;
-    width: 40px;
-    height: 40px;
+    width: clamp(10px, 5vw, 30px);
+    height: clamp(10px, 5vw, 30px);
 }
