--- a/src/components/contactme.css
+++ b/src/components/contactme.css
@@ -1,10 +1,9 @@
 .contactContainer {
     padding-top: 9rem;
     align-content: center;
-    margin-left: 15vw;
-    margin-right: 8vh;
-
     max-width: 800px;
+    margin-left: 15vw;
+    margin-right: 15vw;
     padding: 2rem;
     background-color: var(--bg1);
     border-radius: 10px;
@@ -28,8 +27,8 @@
 
 .contactContainer svg {
     margin-right: .5rem;
-    width: 24px;
-    height: 24px;
+    width: clamp(10px, 5vw, 30px);
+    height: clamp(10px, 5vw, 30px);
     fill: var(--a1);
 }
 
