--- a/src/components/presentation.css
+++ b/src/components/presentation.css
@@ -2,7 +2,7 @@
     padding-top: 9rem;
     align-content: center;
     margin-left: 15vw;
-    margin-right: 15vh;
+    margin-right: 15vw;
 }
 
 .presentation {
