--- a/src/components/projects.css
+++ b/src/components/projects.css
@@ -1,7 +1,7 @@
 .projectsContainer {
   padding-top: 1rem;
   margin-left: 15vw;
-  margin-right: 15vh;
+  margin-right: 15vw;
   align-content: center;
 }
 
