--- a/src/components/abautme.css
+++ b/src/components/abautme.css
@@ -1,7 +1,6 @@
 .abautContainer {
     padding-top: 9rem;
     align-content: center;
-    max-width: 800px;
     margin-left: 15vw;
     margin-right: 15vw;
     padding: 2rem;
@@ -21,6 +20,8 @@
     font-size: clamp(5px, 2.5vw, 15px);
     line-height: 1.8;
     color: var(--a1-hover);
+    text-align: justify;
+    text-justify: inter-word;
 }
 
 .abautContainer svg {
