--- a/src/components/abautme.css
+++ b/src/components/abautme.css
@@ -1,13 +1,18 @@
 .abautContainer {
     padding-top: 9rem;
-    align-content: center;
     margin-left: 15vw;
     margin-right: 15vw;
+    display: flex;
+    justify-content: center;
+}
+
+.abautCard {
     padding: 2rem;
     background-color: var(--bg1);
     border-radius: 10px;
     box-shadow: var(--bg1-shadow);
     text-align: center;
+    max-width: 600px;
 }
 
 .abautContainer h1 {
@@ -17,7 +22,7 @@
 }
 
 .abautContainer p {
-    font-size: clamp(5px, 2.5vw, 15px);
+    font-size: clamp(5px, 2.5vw, 20px);
     line-height: 1.8;
     color: var(--a1-hover);
     text-align: justify;
