--- a/src/components/contactme.css
+++ b/src/components/contactme.css
@@ -1,13 +1,18 @@
 .contactContainer {
     padding-top: 9rem;
-    align-content: center;
     margin-left: 15vw;
     margin-right: 15vw;
+    display: flex;
+    justify-content: center;
+}
+
+.contactCard {
     padding: 2rem;
     background-color: var(--bg1);
     border-radius: 10px;
     box-shadow: var(--bg1-shadow);
     text-align: center;
+    max-width: 600px;
 }
 
 .contactTitle {
