--- a/src/components/experience.css
+++ b/src/components/experience.css
@@ -42,13 +42,25 @@
 
 .job h3 {
     font-size: 1.5rem;
-    margin-bottom: 0.5rem;
+    margin: 0.5rem 2rem;
+    text-align: left;
 }
 
-.job p {
+.job ul {
+    list-style: disc inside;
+    padding: 0;
     font-size: 1rem;
-    line-height: 1.5;
+    margin: 0.2rem 2rem;
+    text-align: left;
+}
+.job li {
     margin-bottom: 0.5rem;
+    font-size: 1rem;
+    color: var(--color2);
+}
+
+.job span {
+    font-style: italic;
 }
 
 h1 svg {
