--- a/src/index.css
+++ b/src/index.css
@@ -19,6 +19,7 @@
 
 [data-theme="light"] {
   color: #213547;
+  --color2: rgba(18, 40, 100, 0.87);
   background-image: radial-gradient(ellipse 80% 80% at 50% -20%, #979797, #e9e9e9);
   --bg1: rgba(255, 255, 255, 0.3);
   --bg1-hover: rgba(75, 75, 75, 0.458);
@@ -31,6 +32,7 @@
 
 [data-theme="dark"] {
   color: rgba(255, 255, 255, 0.87);
+  --color2: rgba(190, 251, 255, 0.87);
   background-image: radial-gradient(ellipse 80% 80% at 50% -20%, #7877c64d, #fff0);
   --bg1: rgba(31, 41, 55, 0.3);
   --bg1-hover: rgba(67, 67, 67, 0.458);
@@ -47,9 +49,14 @@ body {
 }
 
 section {
-  margin-bottom: 200px;
+  padding-top: 9rem;
 }
 
 h1 {
   text-align: center;
+}
+
+p {
+  color: var(--color2);
+  text-align: left;
 }
